<resources>
    <string name="net_work_error">网络请求失败</string>
    <string name="net_work_invalid">网络不可用，请检查网络设置</string>
    <string name="app_name">萝卜票据</string>
    <string name="app_name_describe">萝卜票据-银行级专业票据理财神器，收益高、安全稳健的赚钱工具</string>
    <string name="home_tag">首页</string>
    <string name="mine_tag">我的</string>
    <string name="find_tag">发现</string>
    <string name="luobo_kuai_zhuan">萝卜快赚</string>
    <string name="luobo_kuai_zhuan_desc">灵活变现</string>
    <string name="luobo_kuai_zhuan_lin_huo">零存零取</string>
    <string name="luobo_ding_tou">萝卜定投</string>
    <string name="luobo_ding_tou_desc">收益稳定</string>
    <string name="luobo_xin_shou">新手抢赚</string>
    <string name="luobo_xin_shou_desc">新手福利专享</string>
    <string name="luobo_yin_piao">银票苗</string>
    <string name="luobo_yin_piao_desc">银行刚性兑付</string>
    <string name="luobo_invite">邀请有礼</string>
    <string name="luobo_invite_desc">邀请送好礼</string>
    <string name="luobo_ti_yan">体验金</string>
    <string name="luobo_block_ti_yan">体验金 8888</string>
    <string name="luobo_ti_yan_desc">新手福利</string>
    <string name="luobo_calculate">计算器</string>
    <string name="luobo_calculate_desc">票据贴现计算</string>
    <string name="mine_invest">我的理财</string>
    <string name="trading_record">交易记录</string>
    <string name="message_center">消息中心</string>
    <string name="account_security">账户安全</string>
    <string name="out_of_app_once_click">再次点击退出</string>
    <string name="new_flag">新</string>
    <string name="cash_flag">兑</string>
    <string name="gesture_month">%1$d月</string>
    <string name="day">天</string>
    <string name="huoqi_end_day">元起投</string>
    <string name="APR">年化收益</string>
    <string name="declaration">公告</string>
    <string name="declaration_detail">公告详情</string>
    <string name="activity_detail_title">活动详情</string>
    <string name="please_draw_your_gesture_psd">请绘制手势密码</string>
    <string name="please_draw_your_gesture_psd_again">请再次绘制手势密码</string>
    <string name="draw_gesture_psd_success">手势密码绘制成功</string>
    <string name="tow_draw_gesture_psd_different">两次绘制结果不一样，请再次绘制</string>
    <string name="two_different_so_reset">两次密码绘制不一致，请重新修改</string>
    <string name="draw_gesture_psd_lest_4">至少连接四个点</string>
    <string name="gesture_verify_hello_world">您好，%1$s</string>
    <string name="draw_gesture_error">手势密码错误</string>
    <string name="gesture_error_number">还有%1$d次机会</string>
    <string name="buy_now">立即加入</string>
    <string name="mine_more">更多</string>
    <string name="fuli_center">福利中心</string>
    <string name="customer_services_phone">客服电话：400&#8211;825&#8211;8626</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_psd_again">请再次输入密码</string>
    <string name="change_phone_please_input_former_login_psd">请输入登录密码</string>
    <string name="login">登录</string>
    <string name="ok">确定</string>
    <string name="complete">完成</string>
    <string name="register">注册</string>
    <string name="redeem">赎回</string>
    <string name="date">日期</string>
    <string name="ben_jin_red_packet_use_role">投资需≥100元可使用</string>
    <string name="feedback_success">反馈成功</string>
    <string name="feedback_success_desc">感谢您对萝卜票据的关注与支持，我们会认\n真处理您的反馈，尽快修复和完善相关功能。</string>
    <string name="total_income">累计收益</string>
    <string name="missing_password">忘记密码</string>
    <string name="have_not_account">没有账号？</string>
    <string name="register_free">免费注册</string>
    <string name="input_empty_phone_number">请输入手机号</string>
    <string name="please_input_valid_phone">请输入正确的手机号</string>
    <string name="login_error_input_valid_psd">密码不能为空</string>
    <string name="login_error_input_min_6">密码长度不能小于6位</string>
    <string name="login_success">登录成功</string>
    <string name="for_get_phone_check_code">获取验证码</string>
    <string name="fast_register_bottom_text">萝卜票据保证，任何情况下绝不泄露您的个人隐私</string>
    <string name="login_via_check_code">验证码登录</string>
    <string name="i_have_invest_code">我有邀请码</string>
    <string name="login_via_psd">密码登录</string>
    <string name="please_input_check_code">请输入验证码</string>
    <string name="please_input_invite_code">请输入邀请码（可选）</string>
    <string name="read_use_service_list">我已阅读并同意</string>
    <string name="use_service_list">《用户服务协议》</string>
    <string name="use_service_title">用户服务协议</string>
    <string name="first_read_accept_service">请先阅读并同意《用户服务协议》</string>
    <string name="post_phone_check_code">重新发送(%1$d)</string>
    <string name="please_input_bound_phone_number">请输入您绑定的手机号</string>
    <string name="next_step">下一步</string>
    <string name="register_right_menu_text">已有账号</string>
    <string name="retrieve_psd">找回密码</string>
    <string name="double_psd_different">两次密码输入不相同</string>
    <string name="trade_record">交易记录</string>
    <string name="mine_total_asset">总资产（元）</string>
    <string name="mine_total_assets_int_string">%1$d.</string>
    <string name="mine_usable_asset">可用余额%1$s元</string>
    <string name="please_input_recharge_money">请输入充值金额</string>
    <string name="please_input_redeem_money">请输入提现金额</string>
    <string name="recharge">充值</string>
    <string name="kuai_zhuan_total_sell_money">%1$.02f万</string>
    <string name="pay">支付</string>
    <string name="withdraw">提现</string>
    <string name="account_phone">手机号码</string>
    <string name="account_login_psd">登录密码</string>
    <string name="modify">修改</string>
    <string name="gesture_psd">手势密码</string>
    <string name="modify_gesture_psd">修改手势密码</string>
    <string name="verify_gesture">验证手势</string>
    <string name="net_bad_modify_gesture_fail">网络连接失败，手势密码设置失败</string>
    <string name="add_bank_card">+ 添加银行卡</string>
    <string name="account_certification">实名认证</string>
    <string name="account_bound_card">绑定银行卡</string>
    <string name="account_not_certification">未认证</string>
    <string name="account_not_bound_card">未绑定</string>
    <string name="safe_logout">安全退出</string>
    <string name="already_logout_safe">已安全退出</string>
    <string name="logout_fail">退出账号失败，请重试</string>
    <string name="account_info">账户信息</string>
    <string name="contact_us">联系我们</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="version_info">检查更新</string>
    <string name="luobo_coin">萝卜币</string>
    <string name="official_weibo">官方微博</string>
    <string name="official_weibo_account">萝卜票据</string>
    <string name="official_weixin">官方微信</string>
    <string name="official_weixin_account">baluobo-com</string>
    <string name="official_web">官方网址</string>
    <string name="official_web_address">www.luobopj.com</string>
    <string name="official_email">邮箱</string>
    <string name="official_email_address">service@luobopj.com</string>
    <string name="official_hot_line">客服电话</string>
    <string name="official_hot_line_number">400&#8211;825&#8211;8626</string>
    <string name="feedback_hot_line_text">客服热线：400&#8211;825&#8211;8626</string>
    <string name="hot_line_service_time">(周一至周五 9:30~18:00)</string>
    <string name="call_hot_line">客服电话</string>
    <string name="call_hot_line_button">呼叫</string>
    <string name="cancel">取消</string>
    <string name="sign_in_every_day">每日签到</string>
    <string name="please_leave_contact">联系方式</string>
    <string name="feedback_contacts">手机/QQ/邮箱</string>
    <string name="feedback_leave_contacts_msg">（非必填）</string>
    <string name="submit">提交</string>
    <string name="feedback_input_hint">欢迎您提出宝贵意见，您留下的每一个字都将帮助改善我们的产品，请输入5~200个字</string>
    <string name="alert_feedabck_input_less_5">输入的字符少于5个</string>
    <string name="about_luobo_coin_dialog_content">尊敬的用户您好，由于版本升级\n需要，当前版本暂不支持萝卜币\n兑换，新版本敬请期待！</string>
    <string name="check_update_now">正在检查新版本</string>
    <string name="read_all_message">一键已读</string>
    <string name="open_account">开户</string>
    <string name="recharge_usable_money">可用金额</string>
    <string name="recharge_bank_card">充值银行卡</string>
    <string name="recharge_bank_card_show">提现银行卡</string>
    <string name="recharge_money_count">充值金额</string>
    <string name="recharge_show_text">提现金额</string>
    <string name="recharge_money_unit">元</string>
    <string name="former_phone_number">原手机号</string>
    <string name="please_input_former_phone">请输入原手机号</string>
    <string name="phone_check_code">验证码</string>
    <string name="change_phone_number">修改手机号</string>
    <string name="change_login_psd">修改登录密码</string>
    <string name="new_login_psd">新密码</string>
    <string name="confirm_new_login_psd">确认新密码</string>
    <string name="change_psd_input_double_different">密码与确认密码不一致，请重新输入</string>
    <string name="loading_data">正在努力加载&#8230;</string>
    <string name="total_assets">总资产</string>
    <string name="assets_usable_money">可用余额</string>
    <string name="freeze_money">冻结资金</string>
    <string name="new_phone_number">新手机号</string>
    <string name="please_input_new_phone_number">请输入新手机号</string>
    <string name="user_recharge_money_less_2">充值金额须大于2元</string>
    <string name="user_withdraw_money_less_2">提现金额须大于2元</string>
    <string name="my_invest_investing">投资中</string>
    <string name="my_invest_repay">还款中</string>
    <string name="my_invest_complete">已还款</string>
    <string name="total_can_redeem_money">可赎回金额</string>
    <string name="sum_of_money">金额</string>
    <string name="logout_current_account">是否退出当前账号？</string>
    <string name="bank_card_manager">银行卡管理</string>
    <string name="unwrap_bank_card">解绑</string>
    <string name="hui_fu_account">汇付账号</string>
    <string name="copy">复制</string>
    <string name="please_first_register_in_huifu">请先在汇付开户</string>
    <string name="please_first_bound_bank_card">请先绑定银行卡</string>
    <string name="huifu_unwrap_url">汇付天下解绑地址\nhttps://c.chinapnr.com/p2puser/\n您确定解绑吗？请慎重考虑</string>
    <string name="copy_huifu_name_already">汇付账号已复制到粘贴板</string>
    <string name="product_detail">详细信息</string>
    <string name="product_audit">项目审核</string>
    <string name="copy_invite_code_success">复制成功</string>
    <string name="product_char">产品特点</string>
    <string name="product_record">交易记录</string>
    <string name="account_usable_money">账户余额</string>
    <string name="bank_rate">银行同期</string>
    <string name="bao_bao_rate">宝宝类</string>
    <string name="principal_money_text">%.0f\n本金(元)</string>
    <string name="product_buy_ding_qi_pre_money">预计收益</string>
    <string name="principal_and_interest_money_text">待收本息(元)</string>
    <string name="exp_income_interest">待收利息(元)</string>
    <string name="kuai_zhuan_product_info">随存随取</string>
    <string name="kuai_zhuan_new_page_import">当日起息 按日计息</string>
    <string name="principal_and_interest_money_huoqi_text">%.2f\n预计30天本息(元)</string>
    <string name="calculate_ticket_money">票面金额(万元)</string>
    <string name="calculate_ticket_money_hint">输入金额</string>
    <string name="calculate_month_rate">月利率(‰)</string>
    <string name="calculate_money_rate_hint">‰</string>
    <string name="calculate_year_rate">年利率(%)</string>
    <string name="calculate_year_rate_hint">%</string>
    <string name="calculate_start_day">贴现日期</string>
    <string name="calculate_end_day">到期日期</string>
    <string name="calculate_add_day_word">调整天数</string>
    <string name="calculate_service_each_ten_thousand">每十万手续费</string>
    <string name="calculate_clear">清除</string>
    <string name="calculate_start">计算</string>
    <string name="calculate_rate_day_count">计息天数</string>
    <string name="calculate_rate_money_each_ten_thousand">每十万贴息</string>
    <string name="calculate_money_repay_rate">贴现利息</string>
    <string name="calculate_money_count">贴现金额</string>
    <string name="calculate_day">天</string>
    <string name="calculate_return_calculate">再计算</string>
    <string name="calculate_return_calculate_hint">0.00元</string>
    <string name="calculate_day_hint">异地通常为3天</string>
    <string name="invalid_net_page_text">网络不可用</string>
    <string name="reload_data">重新加载</string>
</resources>