<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CalculateText"
                android:layout_height="wrap_content"
                android:text="@string/calculate_ticket_money" />

            <EditText
                android:id="@+id/calculate_tick_money_view"
                style="@style/CalculateEdit"
                android:layout_width="match_parent"
                android:hint="@string/calculate_ticket_money_hint"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/calculate_text_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/CalculateText"
                android:layout_height="wrap_content"
                android:text="@string/calculate_month_rate" />

            <EditText
                android:id="@+id/calculate_tick_rate_month_view"
                style="@style/CalculateEdit"
                android:layout_width="match_parent"
                android:hint="@string/calculate_money_rate_hint"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/calculate_text_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/CalculateText"
                android:layout_height="wrap_content"
                android:text="@string/calculate_year_rate" />

            <EditText
                android:id="@+id/calculate_tick_rate_year_view"
                style="@style/CalculateEdit"
                android:layout_width="match_parent"
                android:hint="@string/calculate_year_rate_hint"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/calculate_text_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/CalculateText"
                android:layout_height="wrap_content"
                android:text="@string/calculate_start_day" />

            <TextView
                android:id="@+id/calculate_tick_start_day_view"
                style="@style/CalculateEdit"
                android:layout_width="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/calculate_text_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/CalculateText"
                android:layout_height="wrap_content"
                android:text="@string/calculate_end_day" />

            <TextView
                android:id="@+id/calculate_tick_end_day_view"
                style="@style/CalculateEdit"
                android:layout_width="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/calculate_text_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/CalculateText"
                android:layout_height="wrap_content"
                android:text="@string/calculate_add_day_word" />

            <EditText
                android:id="@+id/calculate_tick_add_day_view"
                style="@style/CalculateEdit"
                android:layout_width="match_parent"
                android:text="3"
                android:hint="@string/calculate_day_hint"
                android:inputType="numberSigned" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/calculate_text_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/CalculateText"
                android:layout_height="wrap_content"
                android:text="@string/calculate_service_each_ten_thousand" />

            <EditText
                android:id="@+id/calculate_tick_service_money_view"
                style="@style/CalculateEdit"
                android:layout_width="match_parent"
                android:hint="0"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/calculate_text_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calculate_tick_clear_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="@dimen/font_size_15"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/common_button_bg"
                android:text="@string/calculate_clear"/>

            <TextView
                android:id="@+id/calculate_tick_calculate_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="@dimen/font_size_15"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@drawable/common_button_bg"
                android:text="@string/calculate_start"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/calculate_text_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/CalculateText"
                android:layout_height="wrap_content"
                android:text="@string/calculate_rate_day_count" />

            <TextView
                android:id="@+id/calculate_tick_day_count_view"
                style="@style/CalculateEdit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/calculate_view_bg"
                android:hint="0" />

            <TextView
                style="@style/CalculateEdit"
                android:layout_width="@dimen/calculate_return_calculate_view_width"
                android:layout_marginLeft="10dp"
                android:paddingLeft="0dp"
                android:gravity="center"
                android:text="@string/calculate_day"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/calculate_text_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/CalculateText"
                android:layout_height="wrap_content"
                android:text="@string/calculate_rate_money_each_ten_thousand" />

            <TextView
                android:id="@+id/calculate_tick_rate_each_ten_thousand_money"
                style="@style/CalculateEdit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textIsSelectable="true"
                android:background="@drawable/calculate_view_bg"
                android:hint="@string/calculate_return_calculate_hint"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/calculate_tick_return_each_ten_thousand_calculate_button"
                style="@style/CalculateButton"
                android:text="@string/calculate_return_calculate"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/calculate_text_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/CalculateText"
                android:layout_height="wrap_content"
                android:text="@string/calculate_money_repay_rate" />

            <TextView
                android:id="@+id/calculate_tick_return_money_view"
                style="@style/CalculateEdit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textIsSelectable="true"
                android:background="@drawable/calculate_view_bg"
                android:hint="@string/calculate_return_calculate_hint"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/calculate_tick_rate_return_calculate_button"
                style="@style/CalculateButton"
                android:gravity="center"
                android:text="@string/calculate_return_calculate"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/calculate_text_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/CalculateText"
                android:layout_height="wrap_content"
                android:text="@string/calculate_money_count" />

            <TextView
                android:id="@+id/calculate_tick_pay_money_view"
                style="@style/CalculateEdit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textIsSelectable="true"
                android:background="@drawable/calculate_view_bg"
                android:hint="@string/calculate_return_calculate_hint"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/calculate_tick_pay_money_each_ten_thousand_return_calculate_button"
                style="@style/CalculateButton"
                android:text="@string/calculate_return_calculate"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>